deploy/base/openehr-nodes/zio/openehrtool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-openehrtool
  namespace: dh-health
  labels:
    app: zio-openehrtool
    ehr-node-name: zio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zio-openehrtool
  template:
    metadata:
      labels:
        app: zio-openehrtool
    spec:
      containers:
      - name: zio-openehrtool
        image: surfercrs4/openehrtool:latest
        ports:
        - containerPort: 9000
