deploy/base/openehr-nodes/zio/openehrtool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-openehrtool
spec:
  selector:
    app: zio-openehrtool
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  type: ClusterIP
